--- a/style2.css
+++ b/style2.css
@@ -204,7 +204,23 @@ color: red;
 
 
 @keyframes boxanim{
-    
+    from{
+      background-blend-mode: none;
+      color: black;
+    }
+    to{
+      background-color: #25503D;
+      color: white;
+    }
+}
+
+@keyframes boxanim2{
+    from{
+      color: black;
+    }
+    to{
+      color: white;
+    }
 }
 
 
@@ -322,6 +338,18 @@ color: red;
     width: 100%;
     height: 100vh;
 }
+box5:hover,box4:hover,.box3:hover,.box2:hover,.box1:hover{
+  
+    animation: boxanim;
+    animation-duration: 500ms;
+    animation-timing-function: ease-in;
+    animation-fill-mode: forwards;
+    
+
+   
+}
+
+
    
 
 
